2009-02-16  Markus Gutschke  <markus@shellinabox.com>

	* Include VCS revision number in user-visible version string.

	* Allow "configure" to select whether OpenSSL and PAM libraries
	should be used at all, dynamically searched-for at run-time, or
	linked as a regular dynamic library.

	* Fixed various bugs that prevents ShellInABox from running on
	FreeBSD

2009-02-12  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.4

2009-02-11  Markus Gutschke  <markus@shellinabox.com>

	* Fixed fatal compiler warning if compiling without SSL support.

	* Fixed cursor hiding and showing

	* Fixed various rendering glitches reported by Phil Endecott of
	Anyterm (http://anyterm.org) fame.

	* Made code more portable. In particular, fixed sed scripts.

	* Added explicit config.h file, instead of passing configuration
	options on the compiler's command line.

	* Fixed compilation issues on BSD systems. Code is still untested
	and unsupported on non-Linux systems at this time.

2009-01-21  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.3

	* Fixed a show-stopper bug that broke the --cert option.

2009-01-21  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.2

	* Fixed a bug that could result in the font getting corrupted.

	* Improved compatibility with more versions of the OpenSSL library.
	Previously, the feature test for TLSEXT did not always work correctly,
	resulting in compilation failures.

	* Improved support for embedding shellinaboxd into existing web
	services. SSL certificates can now be passed in through a file
	handle, and port and pid numbers can be retrieved from the CGI header.

2009-01-08  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.1

	* Fixed build errors mostly related to x86_64.

	* Added --no-beep command line option to avoid VLC plugin crashing
	Firefox/x86_64.

	* Fixed multi-line selections in Firefox.

2009-01-01  Markus Gutschke  <markus@shellinabox.com>
